Fixed bug #71434 (finfo throws notice for specific python file)